overflow fix

--- a/src/main-container/main-container.component.scss
+++ b/src/main-container/main-container.component.scss
@@ -7,7 +7,7 @@
 }
 
 #card-collection-container{
-    position: relative;
+    position: absolute;
     top:50px;
     left: 50px;
 }
